chore: minor code cleanup.