@@ -11,7 +11,6 @@ import org.github.gestalt.config.utils.ValidateOf;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.Mockito;
 
 import java.util.*;
 
@@ -163,7 +162,7 @@ class SequencedSetDecoderTest {
         Assertions.assertTrue(values.hasResults());
         Assertions.assertEquals(3, values.results().size());
         Assertions.assertEquals(1, values.getErrors().size());
-        Assertions.assertEquals("Missing array index: 2 for path: db.hosts", values.getErrors().get(0).description());
+        Assertions.assertEquals("Missing array index: 2 for path: db.hosts", values.getErrors().getFirst().description());
 
         Set<Double> results = (Set<Double>) values.results();
         assertThat(results)
@@ -235,7 +234,7 @@ class SequencedSetDecoderTest {
 
         Assertions.assertEquals(1, values.getErrors().size());
         Assertions.assertEquals("Leaf on path: db.hosts, has no value attempting to decode SequencedSet",
-            values.getErrors().get(0).description());
+            values.getErrors().getFirst().description());
     }
 
     @Test
@@ -250,7 +249,7 @@ class SequencedSetDecoderTest {
 
         Assertions.assertEquals(1, values.getErrors().size());
         Assertions.assertEquals("Expected a Array on path: db.hosts, received node type: null, attempting to decode SequencedSet",
-            values.getErrors().get(0).description());
+            values.getErrors().getFirst().description());
     }
 
 
@@ -280,6 +279,7 @@ class SequencedSetDecoderTest {
         Assertions.assertEquals(0, values.results().size());
     }
 
+    @SuppressWarnings("unchecked")
     @Test
     void arrayDecodeEmptyLeafNodeOk() {
         ConfigNode nodes = new LeafNode("");
@@ -376,6 +376,6 @@ class SequencedSetDecoderTest {
 
         Assertions.assertEquals(1, values.getErrors().size());
         Assertions.assertEquals("Expected a Array on path: db.hosts, received node type: MAP, attempting to decode SequencedSet",
-            values.getErrors().get(0).description());
+            values.getErrors().getFirst().description());
     }
 }
